TPort 1.20.4
        /*
         * changelog 1.20.4 update:
         *
         * updated the resource pack format to 22
         *
         * Finished the Logging setting
         * Auto backups are working again
         *
         * Added Item Selection in the Quick Edit menu
         * Added whitelist clone to the Quick Edit menu
         *
         * Full update for Search
         *  - Added World search type. Search for TPorts that are in the given world
         *  - Added OwnedTPorts search type. Search for players owned TPorts
         *  - Search can now be run with inventories, use '/tport search' or find it in the settings screen
         *  - Added new search modes: not equals, ends with, not contains
         *
         * Added full adapter support
         *  - server admins now can select the best adapter for their server
         *  - The default is set to automatic, this chooses based upon the server version the best adapter
         *  - The end goal is that each Minecraft version has their own adapter
         *  - The adaptive adapter should mainly be used if your version does not exist (example: using TPort for a new Minecraft version that TPort does not yet have a adapter for)
         *  - If the selected adapter does not load the adaptive is used as a backup
         *  - command: /tport adapter [adapter]
         *  - permissions: tport.adapter or tport.admin for setting the adapter
         *  - selecting the adapter can also be done via the setting menu
         *
         * Added beta support for BlueMap
         *  - Works the same as the Dynmap support
         *  - to enable: /tport features blueMap state true, and make sure that BlueMap is successfully loaded into your server
         *  - For now only a toggle for showing state on the map is available using: /tport edit <TPort name> blueMap show [state]
         *
         * Added a safety check to PLTP
         *  - /tport PLTP tp <player> [safetyCheck]
         *  - when teleport